# agentics

./: .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md
.ai/plans/: rules_for_workflow_consistency.md
.github/workflows/: agentics-maintenance.yml  agents-doc-sync.lock.yml  agents-doc-sync.md  copilot-setup-steps.yml  precommit-agentic-check.yml
agentic-harness/: README.md  pyproject.toml
agentic-harness/.ai/prompts/: evaluator.md  generator.md  planner.md
agentic-harness/src/agentic_harness/: __init__.py  cli.py  config.py  context.py  orchestrator.py  schema.py
agentic-harness/src/agentic_harness/agents/: base.py  evaluator.py  generator.py  planner.py
agentic-harness/src/agentic_harness/handoff/: reader.py  writer.py
agentic-harness/src/agentic_harness/projects/: detector.py  registry.py
agentic-harness/src/agentic_harness/providers/: __init__.py  anthropic_client.py  errors.py  openai_client.py
agentic-harness/src/agentic_harness/tools/: file_ops.py  git_ops.py  shell.py
claude-commands/: CLAUDE.md  Makefile
claude-commands/commands/: design.md  refine.md  review.md  suggest.md
claude-commands/shared/: design-templates.md  pr-commands.md
commands/: refine.md  review.md
precommit-agentic-check/: .pre-commit-hooks.yaml  README.md  pyproject.toml
precommit-agentic-check/.ai/prompts/: precommit_gate.md
precommit-agentic-check/examples/: .pre-commit-config.yaml
precommit-agentic-check/src/agentic_check/: __init__.py  cli.py  git_input.py  prompt_loader.py  schema.py
precommit-agentic-check/src/agentic_check/providers/: __init__.py  anthropic_client.py  errors.py  openai_client.py
precommit-agentic-check/tests/: test_cli.py  test_git_input.py  test_integration_flow.py  test_prompt_loader.py  test_schema.py
scripts/: check-workflow-source-parity.sh
