[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-harness"
version = "0.1.0"
description = "Multi-agent orchestration harness for long-running development tasks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["agent", "llm", "orchestration", "harness"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.scripts]
agentic-harness = "agentic_harness.cli:main"

[project.urls]
Homepage = "https://github.com/aaronspindler/agentics"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
